welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:7: error: value &&! is not a member of Boolean
	else if ((a>=10 && a<=20)&&!(b>=10 && b<=20))
                                 ^